# ark-pi

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml
deploy/llm-pi/: README.md
deploy/rag-pi/: README.md
docs/: architecture.md  corpus-ingest.md  embeddings.md  hardware.md  roadmap.md  wikipedia-corpus.md
docs/deployment/: README.md  installer-bootstrap-contract.md  two-pi-manual.md
samples/docs/: README.md
src/ark_pi/: __init__.py  appliance_ask_smoke.py  appliance_receipt.py  appliance_smoke.py  cli.py  config.py  init.py  (+2 more)
tests/: conftest.py  mediawiki_fixtures.py  test_api.py  test_api_embeddings_diagnostics.py  test_api_index_delete.py  test_api_indexes.py  test_api_ingest.py  test_api_init.py  test_api_llm_diagnostics.py  test_api_path_ingest.py  test_api_preflight.py  test_api_quickstart.py  test_api_workspace_export.py  test_api_workspace_export_download.py  test_api_workspace_import.py  test_api_workspace_import_upload.py  test_appliance_ask_smoke.py  test_appliance_ask_smoke_cli.py  test_appliance_receipt.py  test_appliance_receipt_cli.py  test_appliance_smoke_cli.py  test_ask.py  test_ask_cli.py  test_ask_llm_cli.py  test_browser_text_import_ui.py  test_chroma_backend_optional.py  test_chroma_semantic_ingest.py  test_chunking.py  test_cli.py  test_corpus_checkpoint.py  test_corpus_ingest.py  test_corpus_ingest_cli.py  test_deploy_bundle.py  test_deploy_bundle_cli.py  test_deploy_bundle_unpack.py  test_deploy_bundle_unpack_cli.py  test_deploy_bundle_verify.py  test_deploy_bundle_verify_cli.py  test_deploy_cli.py  test_deploy_plan.py  (+39 more)
(+68 files in other folders)
