[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ark-pi"
version = "0.1.0"
description = "Two-Raspberry-Pi offline/local RAG appliance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "typer",
    "rich",
    "fastapi",
    "uvicorn",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "httpx2",
]
chroma = [
    "chromadb",
]

[project.scripts]
ark = "ark_pi.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ark_pi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
